// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox Checked 1`] = `
<label
  htmlFor={1}
>
  <input
    checked={true}
    className="sc-bBHxTw kqQsHC"
    data-element="checkbox"
    disabled={false}
    id={1}
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`Storyshots Checkbox Default 1`] = `
<label
  htmlFor={1}
>
  <input
    className="sc-bBHxTw kqQsHC"
    data-element="checkbox"
    disabled={false}
    id={1}
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`Storyshots Checkbox Error 1`] = `
<label
  htmlFor={1}
>
  <input
    className="sc-bBHxTw egKUju"
    data-element="checkbox"
    disabled={false}
    hasError={true}
    id={1}
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`Storyshots Checkbox Label 1`] = `
<label
  htmlFor={1}
>
  <input
    className="sc-bBHxTw kqQsHC"
    data-element="checkbox"
    disabled={false}
    id={1}
    label="This is example of checkbox with label"
    onChange={[Function]}
    type="checkbox"
  />
  <span>
     
    This is example of checkbox with label
  </span>
</label>
`;
